--- a/WindowsFormTest/WindowsFormTest/WindowsFormTest.csproj
+++ b/WindowsFormTest/WindowsFormTest/WindowsFormTest.csproj
@@ -95,6 +95,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Content\gamification.jpg" />
+    <Content Include="ImageData\icon-user-default.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
