Module version with implemented methods for getting and setting values of number of points, current level and owned badges, and add rank

--- a/WindowsFormTest/WindowsFormTest/WindowsFormTest.csproj
+++ b/WindowsFormTest/WindowsFormTest/WindowsFormTest.csproj
@@ -101,7 +101,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Content\gamification.jpg" />
-    <Content Include="ImageData\icon-user-default.jpg" />
+    <Content Include="Content\icon-user-default.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
