--- a/GamificationLibrary/Gamificationlibrary/Gamificationlibrary.csproj
+++ b/GamificationLibrary/Gamificationlibrary/Gamificationlibrary.csproj
@@ -30,8 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.6.9.8\lib\net45\MySql.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,18 +46,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="Badge.cs" />
     <Compile Include="DataBase\Activity.cs" />
     <Compile Include="DataBase\Badges.cs" />
     <Compile Include="DataBase\GamificationConnectGamification.cs" />
     <Compile Include="DataBase\Helpers.cs" />
     <Compile Include="DataBase\History.cs" />
     <Compile Include="DataBase\Levels.cs" />
+    <Compile Include="DataBase\ListBadges.cs" />
     <Compile Include="DataBase\Prizes.cs" />
     <Compile Include="DataBase\Profile.cs" />
     <Compile Include="DataBase\Ranks.cs" />
+    <Compile Include="Level.cs" />
+    <Compile Include="Points.cs" />
+    <Compile Include="Rank.cs" />
+    <Compile Include="UserProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataBase\Users.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
