--- a/ShopUseGamifications/ShopUseGamifications/ShopUseGamifications.csproj
+++ b/ShopUseGamifications/ShopUseGamifications/ShopUseGamifications.csproj
@@ -38,6 +38,10 @@
     <Reference Include="Gamificationlibrary">
       <HintPath>..\..\GamificationLibrary\Gamificationlibrary\bin\Debug\Gamificationlibrary.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\GamificationLibrary\Gamificationlibrary\bin\Debug\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -97,6 +101,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
