--- a/GamificationLibrary/Gamificationlibrary/Gamificationlibrary.csproj
+++ b/GamificationLibrary/Gamificationlibrary/Gamificationlibrary.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Histories.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="Points.cs" />
+    <Compile Include="Prizes.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
